--- a/Graphs/test/CMakeLists.txt
+++ b/Graphs/test/CMakeLists.txt
@@ -5,10 +5,15 @@ file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES true *.h *.cpp)
 
 set(SOURCES ${TEST_SOURCES})
 
+enable_testing()
+include(GoogleTest)
+gtest_discover_tests(${BINARY})
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/.)
 
 add_executable(${BINARY} ${TEST_SOURCES})
 
+target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest)
+
 add_test(NAME ${BINARY} COMMAND ${BINARY})
 
-target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest)
