--- a/Graphs/CMakeLists.txt
+++ b/Graphs/CMakeLists.txt
@@ -5,7 +5,7 @@ project(Graphs)
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/.)
-
+enable_testing()
 add_subdirectory(test)
 
 set(BINARY ${CMAKE_PROJECT_NAME})
@@ -15,7 +15,9 @@ set(SOURCES main.cpp
             graph.cpp
             adj_matrix_graph.cpp)
 cmake_print_variables("sources are....\n ${SOURCES}")
+
 add_executable(${BINARY} ${SOURCES})
 add_library(${BINARY}_lib STATIC ${SOURCES}) 
 
 target_include_directories(${BINARY} PUBLIC ("$(git rev-parse --show-toplevel)/googletest"))
+
